--- a/src/app/styles_css/subSection.module.css
+++ b/src/app/styles_css/subSection.module.css
@@ -11,17 +11,17 @@
   display: flex;
   flex-direction: column;
   background-color: #f7f7f7;
-  width: 70vw;
+  width: 85vw;
   padding: clamp(3rem, 6vw, 14rem) clamp(0rem, 0vw, 14rem);
-  border-radius: 3vw;
-  gap: 2vw;
+  border-radius: 6vw;
+  gap: 8vw;
   align-items: center;
 }
 
 .textCombined {
   display: flex;
   flex-direction: column;
-  gap: 0.6vw;
+  gap: 2.6vw;
   align-items: center;
   text-align: center;
 }
@@ -31,10 +31,12 @@
   text-align: center;
   color: #484747;
   font-weight: 500;
+  font-size: clamp(0.8rem, 3.6vw, 3.5rem);
+
 }
 
 .title {
-  font-size: clamp(25px, 1vw, 43rem);
+  font-size: clamp(25px, 5vw, 43rem);
   font-weight: 600;
   background: linear-gradient(
          95deg,
@@ -48,7 +50,7 @@
 /* ---------- Card Content ---------- */
 .image {
   width: 100%;
-  border-radius: 1vw;
+  border-radius: 2vw;
 }
 
 .text {
@@ -77,7 +79,7 @@
 
 .mainCard {
   flex: 0 0 auto;
-  width: 18vw;
+  width: 50vw;
   display: flex;
   flex-direction: column;
   gap: 0.6vw;
@@ -93,3 +95,31 @@
     transform: translateX(-50%);
   }
 }
+
+@media (min-width: 768px) {
+  .card {
+    display: flex;
+    flex-direction: column;
+    background-color: #f7f7f7;
+    width: 70vw;
+    padding: clamp(3rem, 6vw, 14rem) clamp(0rem, 0vw, 14rem);
+    border-radius: 3vw;
+    gap: 2vw;
+    align-items: center;
+}
+.image {
+  width: 100%;
+  border-radius: 1vw;
+}
+
+.mainCard {
+  flex: 0 0 auto;
+  width: 18vw;
+  display: flex;
+  flex-direction: column;
+  gap: 0.6vw;
+  align-items: center;
+}
+
+    
+  }
