--- a/src/app/styles_css/home.module.css
+++ b/src/app/styles_css/home.module.css
@@ -1,3 +1,44 @@
+.hero {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    gap: 4rem;
+    align-items: center;
+    padding: clamp(3rem, 12vw, 14rem) clamp(2rem, 4vw, 14rem);
+    background-color: black;
+
+}
+
+.heroImage {
+    width: 65%;
+    height: auto;
+}
+
+.heroHeading {
+        font-size: clamp(24px, 8vw, 70px);
+        font-weight: 610;
+        line-height: 1.3;        /* Add this */
+        padding: 0;            /* Ensure no padding */
+        margin: 0;             /* Remove top/bottom margin */
+        text-align: center;
+        color: white;
+        letter-spacing: -3px; 
+
+
+}
+
+.heroSubHeading {
+            font-size: clamp(24px, 8vw, 40px);
+        font-weight: 510;
+        line-height: 1.3;        /* Add this */
+        padding: 0;            /* Ensure no padding */
+        margin: 0;             /* Remove top/bottom margin */
+        text-align: center;
+        color: white;
+}
+
+
+
 .sectionOne {
     display: flex;
     flex-direction: column;
@@ -10,7 +51,7 @@
 
 }
 
-.heading {
+.sectionOneHeading {
         font-size: clamp(24px, 8vw, 48px);
         font-weight: 540;
         line-height: 1.3;        /* Add this */
@@ -70,7 +111,25 @@
 
 }
 
-.collage {
+.sectionTwoHeading {
+        font-size: clamp(24px, 8vw, 48px);
+        font-weight: 540;
+        line-height: 1.3;        /* Add this */
+        padding: 0;            /* Ensure no padding */
+        margin: 0;             /* Remove top/bottom margin */
+        text-align: center;
+        background: linear-gradient(
+         95deg,
+         #8201b5 0%,   /* purple */
+         #e6052a 100%  /* sky blue */
+        );
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+
+          
+}
+
+.sectionTwoImage {
     width: 65%;
     height: auto;
 }
@@ -85,7 +144,25 @@
 
 }
 
-.tablet {
+.sectionThreeHeading {
+        font-size: clamp(24px, 8vw, 48px);
+        font-weight: 540;
+        line-height: 1.3;        /* Add this */
+        padding: 0;            /* Ensure no padding */
+        margin: 0;             /* Remove top/bottom margin */
+        text-align: center;
+        background: linear-gradient(
+         95deg,
+         #8201b5 0%,   /* purple */
+         #e6052a 100%  /* sky blue */
+        );
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+
+          
+}
+
+.sectionThreeImage {
     width: 65%;
     height: auto;
 }
@@ -100,7 +177,24 @@
 
 }
 
-.Techimages {
+.sectionFourHeading {
+        font-size: clamp(24px, 8vw, 48px);
+        font-weight: 540;
+        line-height: 1.3;        /* Add this */
+        padding: 0;            /* Ensure no padding */
+        margin: 0;             /* Remove top/bottom margin */
+        text-align: center;
+        background: linear-gradient(
+         95deg,
+         #8201b5 0%,   /* purple */
+         #e6052a 100%  /* sky blue */
+        );
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+
+}
+
+.sectionFourImages {
     display: flex;
     gap:2.4vw;
     width: fit-content;
@@ -132,5 +226,73 @@
     width: 15%;
 
 }
+
+.sectionFive {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    gap: 4rem;
+    align-items: center;
+    padding: clamp(3rem, 5vw, 14rem) clamp(2rem, 4vw, 14rem);
+
+}
+
+.sectionFiveHeading {
+        font-size: clamp(24px, 8vw, 48px);
+        font-weight: 540;
+        line-height: 1.3;        /* Add this */
+        padding: 0;            /* Ensure no padding */
+        margin: 0;             /* Remove top/bottom margin */
+        text-align: center;
+        background: linear-gradient(
+         95deg,
+         #8201b5 0%,   /* purple */
+         #e6052a 100%  /* sky blue */
+        );
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+
+          
+}
+
+.sectionFiveImage {
+    width: 65%;
+    height: auto;
+}
+
+.sectionSix {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    gap: 4rem;
+    align-items: center;
+    padding: clamp(3rem, 5vw, 14rem) clamp(2rem, 4vw, 14rem);
+
+}
+
+.sectionSixHeading {
+        font-size: clamp(24px, 8vw, 48px);
+        font-weight: 540;
+        line-height: 1.3;        /* Add this */
+        padding: 0;            /* Ensure no padding */
+        margin: 0;             /* Remove top/bottom margin */
+        text-align: center;
+        background: linear-gradient(
+         95deg,
+         #8201b5 0%,   /* purple */
+         #e6052a 100%  /* sky blue */
+        );
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+
+          
+}
+
+.sectionSixImage {
+    width: 65%;
+    height: auto;
+}
+
+
 
 
